--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@sanity/client": "^3.3.2",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-medium-image-zoom": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
